--- a/charts/values.yaml
+++ b/charts/values.yaml
@@ -2,7 +2,7 @@ replicaCount: 1
 
 image:
   repository: himanshu162pnt723/goapp
-  tag: latest
+  tag: 20260102065321
   pullPolicy: IfNotPresent
 
 service:
