--- a/charts/templates/deployment.yaml
+++ b/charts/templates/deployment.yaml
@@ -23,7 +23,7 @@ spec:
 
           readinessProbe:
             httpGet:
-              path: /health
+              path: /
               port: {{ .Values.service.port }}
             initialDelaySeconds: 5
             periodSeconds: 10
