--- a/charts/templates/deployment.yaml
+++ b/charts/templates/deployment.yaml
@@ -21,6 +21,12 @@ spec:
           ports:
             - containerPort: {{ .Values.service.port }}
 
+          resources:
+            requests:
+              cpu: "100m"
+            limits:
+              cpu: "1000m"
+
           readinessProbe:
             httpGet:
               path: /
